[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-easy-logging"
version = "0.1.0"
description = "A Django package for easy CRUD operation logging and container logs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "shree256"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/shree256/django-easy-logging"

[tool.setuptools]
packages = ["easy_logging"]

[tool.ruff]
line-length = 88
select = []
show-fixes = true
target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["PLR2004", "S101", "S106"]
