[tool.poetry]
name = "easy-audit-logging"
version = "0.1.0"
description = "A Django package for easy CRUD operation logging and container logs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/shree256/easy-audit-logging"
repository = "https://github.com/shree256/easy-audit-logging"
documentation = "https://github.com/shree256/easy-audit-logging"

classifiers = [
    "Environment :: Plugins",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "easy_logging"}]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2,<6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = [
    {version = "~3.5", python = "<3.9"},
    {version = "^3.5", python = ">=3.9"},
]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = []
show-fixes = true
target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["PLR2004", "S101", "S106"]
